--- a/index.html
+++ b/index.html
@@ -2,78 +2,172 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inventaire des tentes</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inventaire Tentes</title>
   <style>
     body {
-      font-family: sans-serif;
-      padding: 1rem;
-      background: #f7f7f7;
-      max-width: 800px;
-      margin: auto;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f2f2f2;
     }
-    h1 {
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 1rem;
       text-align: center;
     }
-    form {
-      display: grid;
-      gap: 0.5rem;
-      background: white;
+    .container {
       padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      margin-bottom: 2rem;
     }
-    select, input, textarea, button {
+    .tente {
+      background: white;
+      margin-bottom: 1rem;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+    input, select, textarea, button {
+      width: 100%;
+      margin-top: 0.5rem;
+      margin-bottom: 1rem;
       padding: 0.5rem;
-      border-radius: 5px;
+      border-radius: 4px;
       border: 1px solid #ccc;
     }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 0.9rem;
+    button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
     }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 0.4rem;
-      text-align: center;
-    }
-    th {
-      background-color: #eee;
-    }
-    @media (max-width: 600px) {
-      table {
-        font-size: 0.8rem;
-      }
+    button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Inventaire des Tentes</h1>
+  </header>
+  <div class="container">
+    <h2>Ajouter une tente</h2>
+    <form id="form-tente">
+      <label>Numéro de la tente</label>
+      <input type="text" id="nom" required />
 
-<h1>Inventaire des tentes</h1>
+      <label>Dernier utilisateur</label>
+      <input type="text" id="utilisateur" />
 
-<form id="tenteForm">
-  <input name="nom" placeholder="Nom de la tente" required />
-  <input name="dernier" type="date" placeholder="Dernière utilisation" />
-  <input name="prochaine" type="date" placeholder="Prochaine utilisation" />
+      <label>Date de dernière utilisation</label>
+      <input type="date" id="dernier" />
 
-  <label>Double toit :
-    <select name="doubleToit">
-      <option value="">--</option>
-      <option value="oui">Oui</option>
-      <option value="non">Non</option>
-    </select>
-  </label>
-  <label>Double toit endommagé :
-    <select name="doubleToitEndommage">
-      <option value="">--</option>
-      <option value="oui">Oui</option>
-      <option value="non">Non</option>
-    </select>
-  </label>
+      <label>Prochaine utilisation</label>
+      <input type="date" id="prochaine" />
 
-  <label>Toit :
-    <select name="toit">
-      <option value="">--</option>
-      <opti
+      <h3>Équipements</h3>
+      <label>Double toit</label>
+      <select id="double-toit">
+        <option value="bon">Bon</option>
+        <option value="endommagé">Endommagé</option>
+      </select>
+
+      <label>Toit</label>
+      <select id="toit">
+        <option value="bon">Bon</option>
+        <option value="endommagé">Endommagé</option>
+      </select>
+
+      <label>Piquets</label>
+      <select id="piquets">
+        <option value="oui">Complet</option>
+        <option value="non">Incomplet</option>
+      </select>
+
+      <label>Nombre de sardines</label>
+      <input type="number" id="sardines" />
+
+      <label>Nombre de maquereaux</label>
+      <input type="number" id="maquereaux" />
+
+      <label>Nombre de bananes</label>
+      <input type="number" id="bananes" />
+
+      <label>Maillet présent</label>
+      <select id="maille">
+        <option value="oui">Oui</option>
+        <option value="non">Non</option>
+      </select>
+
+      <label>Tapis de sol</label>
+      <select id="tapis">
+        <option value="bon">Bon</option>
+        <option value="endommagé">Endommagé</option>
+      </select>
+
+      <label>Remarques</label>
+      <textarea id="remarques"></textarea>
+
+      <button type="submit">Ajouter la tente</button>
+    </form>
+
+    <h2>Liste des tentes</h2>
+    <div id="liste-tentes"></div>
+  </div>
+
+  <script>
+    const form = document.getElementById('form-tente');
+    const liste = document.getElementById('liste-tentes');
+    let tentes = JSON.parse(localStorage.getItem('tentes')) || [];
+
+    function renderTentes() {
+      liste.innerHTML = '';
+      tentes.forEach((tente, index) => {
+        const div = document.createElement('div');
+        div.className = 'tente';
+        div.innerHTML = `
+          <strong>Tente ${tente.nom}</strong><br>
+          Dernier utilisateur : ${tente.utilisateur || '-'}<br>
+          Dernière utilisation : ${tente.dernier || '-'}<br>
+          Prochaine utilisation : ${tente.prochaine || '-'}<br>
+          Double toit : ${tente.doubleToit}<br>
+          Toit : ${tente.toit}<br>
+          Piquets complets : ${tente.piquets}<br>
+          Sardines : ${tente.sardines}<br>
+          Maquereaux : ${tente.maquereaux}<br>
+          Bananes : ${tente.bananes}<br>
+          Maillet présent : ${tente.maille}<br>
+          Tapis de sol : ${tente.tapis}<br>
+          Remarques : ${tente.remarques || 'Aucune'}
+        `;
+        liste.appendChild(div);
+      });
+    }
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      const nouvelleTente = {
+        nom: document.getElementById('nom').value,
+        utilisateur: document.getElementById('utilisateur').value,
+        dernier: document.getElementById('dernier').value,
+        prochaine: document.getElementById('prochaine').value,
+        doubleToit: document.getElementById('double-toit').value,
+        toit: document.getElementById('toit').value,
+        piquets: document.getElementById('piquets').value,
+        sardines: document.getElementById('sardines').value,
+        maquereaux: document.getElementById('maquereaux').value,
+        bananes: document.getElementById('bananes').value,
+        maille: document.getElementById('maille').value,
+        tapis: document.getElementById('tapis').value,
+        remarques: document.getElementById('remarques').value
+      };
+      tentes.push(nouvelleTente);
+      localStorage.setItem('tentes', JSON.stringify(tentes));
+      form.reset();
+      renderTentes();
+    });
+
+    renderTentes();
+  </script>
+</body>
+</html>
