--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
         remarques: document.getElementById('remarques').value
       };
 
+      fetch("https://script.google.com/macros/s/AKfycbyVIYGEs4u_5R2kvFwfITAv03B6FLqSpRHQt3qrCreCKxGv6VoNzAmOodFkLXQNteUI/exec", {
+        method: "POST",
+        mode: "no-cors",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(tente)
+      }).then(() => {
+        alert("Tente ajoutée avec succès !");
+      });
+
       const liste = document.getElementById('listeTentes');
       const div = document.createElement('div');
       div.className = 'tent-entry';
