--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
   </div>
 
   <script>
+    const scriptURL = "https://script.google.com/macros/s/AKfycbyVIYGEs4u_5R2kvFwfITAv03B6FLqSpRHQt3qrCreCKxGv6VoNzAmOodFkLXQNteUI/exec";
+
     function ajouterTente() {
       const tente = {
         nom: document.getElementById('nom').value,
@@ -186,7 +188,12 @@
         date: new Date().toISOString()
       };
 
-      fetch("https://script.google.com/macros/s/AKfycbyVIYGEs4u_5R2kvFwfITAv03B6FLqSpRHQt3qrCreCKxGv6VoNzAmOodFkLXQNteUI/exec", {
+      if (!tente.nom.trim()) {
+        alert("Le numéro de la tente est obligatoire.");
+        return;
+      }
+
+      fetch(scriptURL, {
         method: "POST",
         mode: "no-cors",
         headers: {
@@ -195,8 +202,12 @@
         body: JSON.stringify(tente)
       }).then(() => {
         alert("Tente ajoutée avec succès !");
+        afficherTente(tente);
+        document.querySelector('.form-section').reset();
       });
+    }
 
+    function afficherTente(tente) {
       const liste = document.getElementById('listeTentes');
       const div = document.createElement('div');
       div.className = 'tent-entry';
